--- a/index.html
+++ b/index.html
@@ -13,7 +13,26 @@
 
 <body>
 
+
+
+
+
 MATH QUIZ!!!
+
+
+<a href= "Step_2/Rules.html">RULES: click here</a>
+
+
+<p>solve THIS problem!</p>
+
+
+
+
+
+
+
+
+
 
 
 
